 $ Updating installation ini file bn-BD
 $  [#27756] Duplicated keys at language files. Thanks Valc.
 
17-Jan-2012 Mark Dexter
 # [#27736] Remove the use of more deprecated functions
 # [#27717] error saving _finder_tokens with big articles
 # [#27708] Com_content arrticle view params: image and links -> Position Links/URLS
 # [#27753] 500 error in Language Manager - DB specific

16-Jan-2012 Mark Dexter
 # Backport joomla platform pull requests #704, #718, #738, #739, #746 and #747.

16-Jan-2012 Christophe Demko
 # [#27719] SQL Server - Error updating #__schemas table
 # [#27729] reCaptcha is installing as default in Global Config causing errors on frontend
 # [#27696] Add a context to onGetIcon event
 $ Change string
 # [#27740] Remove files that are now linked
 - Remove useless files
 + Backporting from the platform (allow specific plural for given number: #726)
 # [#27742] The new links in article lack styling flexibility, plus fix invalid html (Andrea Tarr)
 ^ Fix RTL for #27696

16-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files el-GR, lt-LT, zh-CN, zh-TW
 $ Updating installation ini file gl-ES
 $ [#27591] URL capitalisation Thanks Brian.
 $ [#27588] Email or e-mail inconsistency. Thanks Brian and Herve.
 $ [#27537] Missing capitalisation in en-GB.com_users.ini. Thanks Brian.
 $ Update installation ini he-IL for typo
 
15-Jan-2012 Christophe Demko
 + [#27451] Add a Admin Menu Item for adding a New User Notes Category
 ^ [#27722] protected function dayToString($day, $abbr = false) Why protected (romacron)
 # [#27702] Error in sql query (Vincenzo Quaranta)
 ^ Move user notes icons in templates folder

15-Jan-2012 Jean-Marie Simonet
 $ Typo in tpl_hathor.sys.ini. Thanks Stella.
 #$ [#27653] patch for captcha fields on reset, remind and contact forms. Thanks Nicola, Rouven, Christophe.
 $ [#27723] Improve tool tip and label for manage permission. Thanks Elin.
 
14-Jan-2012 Christophe Demko
 # [#27712] Errors in joomla.sql (Christian Kern)