@@ -53,6 +53,8 @@ COM_FINDER_CONFIG_SHOW_DESCRIPTION_LABEL="Result Description"
 COM_FINDER_CONFIG_SHOW_URL_DESCRIPTION="Show the associated URL for the item."
 COM_FINDER_CONFIG_SHOW_URL_LABEL="Result URL"
 COM_FINDER_CONFIG_STEMMER_DESCRIPTION="The language stemmer to use. Choose snowball if a stemmer for your language is not available or you have multilingual content."
+COM_FINDER_CONFIG_STEMMER_ENABLE_DESCRIPTION="Enable language stemming if available."
+COM_FINDER_CONFIG_STEMMER_ENABLE_LABEL="Enable stemmer"
 COM_FINDER_CONFIG_STEMMER_LABEL="Stemmer"
 COM_FINDER_CONFIG_STEMMER_PORTER_EN="English Only"
 COM_FINDER_CONFIG_STEMMER_SNOWBALL="Snowball"
